Fixed footer spacing in safari

--- a/detail-pages/detail-pages.css
+++ b/detail-pages/detail-pages.css
@@ -48,7 +48,7 @@ p {
 }
 
 .footer-link {
-  margin: 64px 0 64px 0;
+  padding: 64px 0 64px 0;
 }
 
 /* LINKS */
